--- a/inner-page-after.html
+++ b/inner-page-after.html
@@ -68,9 +68,8 @@
                 </div>
                 <div class="col-md-4 my-auto">
                     <div class="header-buttons">
-                        <a href="#" data-toggle="modal" data-target="#exampleModalCenter" class="site-button">Log In</a>
-                        <a href="#" data-toggle="modal" data-target="#exampleModalCenter2"
-                            class="site-button borderd">Join Now</a>
+                        <a href="login.html" class="site-button">Log In</a>
+                        <a href="singup.html" class="site-button borderd">Join Now</a>
                     </div>
                 </div>
             </div>
@@ -79,135 +78,6 @@
     <!-- header area end -->
 
 <!-- popup area start -->
-<div class="for-loginmethod">
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
-        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true"><i class="icofont-close"></i></span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="log-inpagess">
-                        <div class="login-content">
-                            <h4>Log In to Start Learning</h4>
-                            <div class="connect-facebook">
-                                <span>
-                                    <a href=""><i class="fa fa-facebook-f"></i>Log In with
-                                        facebook</a>
-                                </span>
-                            </div>
-                            <div class="loginforms1">
-                                <form action="">
-                                    <div class="login-us">
-                                        <div class="form-group">
-                                            <input type="email" name="email" placeholder="Email">
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="password" name="password" placeholder="Password">
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="repare-pass">
-                                <div class="log-into">
-                                    <div class="try-thisfield">
-                                        <a href="profile.html" class="logs1">Log In</a>
-                                        <a href="" class="forgot1">Forgot Password?</a>
-                                    </div>
-                                    <span>Don't have an membership? <a href="">JOIN</a></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Modal -->
-</div>
-
-
-<div class="for-loginmethod">
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog"
-        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true"><i class="icofont-close"></i></span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="log-inpagess">
-                        <div class="login-content">
-                            <h4>Join to Start Learning</h4>
-                            <div class="connect-facebook">
-                                <span>
-                                    <a href=""><i class="fa fa-facebook-f"></i>Log In with
-                                        facebook</a>
-                                </span>
-                            </div>
-                            <div class="loginforms1">
-                                <form action="">
-                                    <div class="login-us">
-                                        <div class="form-group">
-                                            <input type="text" name="firstname" placeholder="First Name">
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="text" name="lastname" placeholder="Last Name">
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="email" name="email" placeholder="Email">
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="tel" placeholder="Phone">
-                                        </div>
-                                        <div class="form-group">
-                                            <select name="subject">
-                                                <option data-display="Occupation">Occupation</option>
-                                                <option value="1">Student</option>
-                                                <option value="2">Freelancer </option>
-                                                <option value="3">Employed </option>
-                                                <option value="4">Business </option>
-                                                <option value="5">Other </option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="password" name="password" placeholder="Password">
-                                        </div>
-                                        <div class="form-grou">
-                                            <label class="container-label">I agree to UX Club <a href="#">Terms
-                                                    and
-                                                    Conditions*</a>
-                                                <input type="checkbox">
-                                                <span class="checkmark"></span>
-                                            </label>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="repare-pass">
-                                <div class="log-into">
-                                    <div class="try-thisfield">
-                                        <a href="profile-2.html" class="logs1 next-hide">Sing Up</a>
-                                    </div>
-                                    <span>You have already joined? <a href="">LOG IN</a></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Modal -->
-</div>
-
 <div class="for-loginmethod payment-option">
     <!-- Modal -->
     <div class="modal fade" id="exampleModalCenter3" tabindex="-1" role="dialog"
@@ -409,7 +279,8 @@
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-lg-8">
-                    <a href="https://www.youtube.com/embed/4xe72U7mXNg?rel=0&amp;controls=0&amp;showinfo=0"
+                    <video src="https://www.youtube.com/embed/4xe72U7mXNg?rel=0&amp;controls=1"></video>
+                    <a href="https://www.youtube.com/embed/4xe72U7mXNg?rel=0&amp;controls=1"
                         class="inner-course bg_img" data-overlay="4" data-background="assets/images/course-1.jpg"
                         data-rel="lightcase:myCollection:">
                         <span><img src="assets/images/play-btn.png" alt=""></span>
