--- a/inner-page-before.html
+++ b/inner-page-before.html
@@ -240,6 +240,12 @@
                                                 <a href="#" class="submit-btn" data-toggle="modal"
                                                     data-target="#exampleModalCenter3" data-dismiss="modal"
                                                     aria-label="Close">Continue</a>
+                                                    <div class="form-bottom">
+
+                                                        <p>You have already joined? <a href="login.html"
+                                                                class="join">Login</a>
+                                                        </p>
+                                                    </div>
                                             </div>
                                         </form>
                                     </div>
