--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
                             </form>
                             <div class="form-bottom">
                                 <a href="#" class="forget-btn">Forgot Password?</a>
-                                <p>Don't have an membership? <a href="#" class="join">Join Now</a></p>
+                                <p>Don't have an membership? <a href="singup.html" class="join">Join Now</a></p>
                             </div>
                         </div>
                     </div>
