--- a/singup.html
+++ b/singup.html
@@ -84,7 +84,7 @@
                             </form>
                             <div class="form-bottom">
                                 
-                                <p>You have already joined? <a href="#" class="join">Login</a>
+                                <p>You have already joined? <a href="login.html" class="join">Login</a>
                                 </p>
                             </div>
                         </div>
